PlanetFour viewer CSS fix.
Magnified view was too large and causing the resulting CSS properties to be invalid.

--- a/projects/planet_four/project.styl
+++ b/projects/planet_four/project.styl
@@ -6,8 +6,8 @@
     position: absolute
     top: 0
     left: 103%
-    width: 200%
-    min-width: 722px
+    width: 180%
+    min-width: 580px
     height: 100%
     min-height: 272px
     background-repeat: no-repeat
